// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches snapshot: enzyme.mount 1`] = `
<Radio
  input={Object {}}
  name="example"
>
  <glamorous(label)>
    <label
      className="css-udpz5g"
    >
      <glamorous(input)
        type="radio"
        value="example"
      >
        <input
          className="css-10svazo"
          type="radio"
          value="example"
        />
      </glamorous(input)>
      <glamorous(span)>
        <span
          className="css-du12vn"
        >
          example
        </span>
      </glamorous(span)>
    </label>
  </glamorous(label)>
</Radio>
`;

exports[`Radio matches snapshot: enzyme.render 1`] = `
<label
  class="css-udpz5g"
>
  <input
    class="css-10svazo"
    type="radio"
    value="example"
  />
  <span
    class="css-du12vn"
  >
    example
  </span>
</label>
`;

exports[`Radio matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)>
  <glamorous(input)
    type="radio"
    value="example"
  />
  <glamorous(span)>
    example
  </glamorous(span)>
</glamorous(label)>
`;
